# codeaug

./: README.md  a.py  clone_detection_with_checkpoints.py  codebert.py  codebert2.py  codebert_aug.py  codebert_clone_detection.py  dataloaders.py  final_train_codebert_on_base.py  final_train_codebert_on_base_augmented_and_mixed.py  load_filtered_base.py  load_filtered_base_augmented_and_mixed.py  make_ds_clone_detection_all_augs.py  models.py  pyproject.toml  tasks.py  train.py  train_clone_detection_codebert_all_augs.py  train_clone_detection_codebert_baseline.py  train_clone_detection_codebert_move_random.py  train_clone_detection_codebert_random_tree_transforms.py  train_clone_detection_codebert_rename_all.py  train_clone_detection_codebert_rename_randomly.py
codeaug/: __init__.py  apply_stategies.py  rename_strategies.py  transforms.py  utils.py
codeaug.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
codeaug/functional/: __init__.py  invert_ifs.py  move_statements.py  remove_comments.py  rename.py  replace_for_with_while.py  spaces.py  switch_compare.py  switch_lines.py
src/python/: codeaug.py  dataloaders.py  requirements.txt  train.py  transform.py
src/python/test_examples/: elif.py
tests/: test_invert_ifs.py  test_remove_comments.py
