[project]
name = "codeaug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beniget>=0.4.2.post1",
    "datasets>=3.2.0",
    "pytest>=8.3.4",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
