[project]
name = "codeaug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "beniget>=0.4.2.post1",
    "black>=25.1.0",
    "bowler>=0.9.0",
    "datasets>=3.2.0",
    "libcst>=1.7.0",
    "pymultidictionary>=1.3.2",
    "pytest>=8.3.4",
    "scikit-learn>=1.7.0",
    "torch>=2.6.0",
    "transformers[torch]>=4.48.3",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
